--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                             <br></br>
                             <h5>Spanish - Native</h5>
                             <h5>Catalan - Native</h5>
-                            <h5>English - High</h5>
+                            <h5>English - Medium</h5>
                         </div>
                     </div>
                 </div>
